# mcp-sdk

./: cabal.project  flake.nix  generate-repo-structure.sh
.github/workflows/: ci.yml
docs/planning/: task-priorities.md
docs/tasks/cicd/: 001-github-actions.md  002-automated-testing.md  003-documentation-generation.md
docs/tasks/client/: 001-initialization.md  002-resource-reading.md  003-tool-execution.md  004-stdio-transport.md  005-connection-management.md
docs/tasks/client/advanced/: 001-resource-subscription.md  002-prompt-handling.md  003-tool-interactions.md  004-sse-transport.md
docs/tasks/core/errors/: 001-error-types.md  002-transport-errors.md  003-protocol-errors.md  004-error-reporting.md
docs/tasks/core/json-rpc/: 001-base-message-types.md  002-json-encoding.md  003-message-validation.md  004-protocol-messages.md
docs/tasks/core/prompts/: 001-prompt-types.md  002-template-types.md  003-result-types.md
docs/tasks/core/protocol/: 001-version-types.md  002-feature-types.md  003-capability-types.md  004-handshake-types.md
docs/tasks/core/resources/: 001-resource-types.md  002-content-types.md  003-metadata-types.md  004-update-types.md
docs/tasks/core/tools/: 001-tool-types.md  002-schema-types.md  003-result-types.md
docs/tasks/core/transport/: 001-transport-typeclass.md  002-stream-types.md  003-connection-lifecycle.md  004-message-framing.md
docs/tasks/devenv/: 001-hls-config.md  002-formatter-setup.md  003-linter-config.md  004-dev-scripts.md
docs/tasks/documentation/: 001-api-documentation.md  002-usage-examples.md  003-architecture-overview.md  004-quickstart-guide.md
docs/tasks/server/: 001-initialization.md  002-resource-serving.md  003-tool-execution.md  004-stdio-transport.md  005-session-management.md
docs/tasks/server/advanced/: 001-resource-updates.md  002-prompt-templates.md  003-advanced-tools.md  004-sse-transport.md
docs/tasks/testing/: 001-property-testing.md  002-conformance-tests.md  003-integration-tests.md  004-example-servers.md
docs/tasks/tools/: 001-debugging-utilities.md  002-project-templates.md  003-example-servers.md
mcp-client/: mcp-client.cabal
mcp-client/src/MCP/: Client.hs
mcp-core/: mcp-core.cabal
mcp-core/src/MCP/: Core.hs
mcp-core/src/MCP/Core/: Types.hs
mcp-core/src/MCP/Core/Types/: Error.hs  Prompt.hs  Resource.hs  Sampling.hs  Tool.hs
mcp-examples/: mcp-examples.cabal
mcp-examples/src/MCP/Examples/: FileServer.hs  SimpleServer.hs
mcp-integration-tests/: mcp-integration-tests.cabal
mcp-server/: mcp-server.cabal
mcp-server/src/MCP/: Server.hs
mcp-transport/: mcp-transport.cabal
mcp-transport-http/: mcp-transport-http.cabal
mcp-transport-http/src/MCP/Transport/: HTTP.hs
mcp-transport-http/src/MCP/Transport/HTTP/: Client.hs  SSE.hs  Server.hs
mcp-transport/src/MCP/: Transport.hs
mcp-transport/src/MCP/Transport/: Stdio.hs  Types.hs
