cabal-version: 3.0
name:          mcp-core
version:       0.1.0.0
synopsis:      Core types and functionality for Model Context Protocol
description:   Core package for the Haskell implementation of Model Context Protocol
license:       BSD-3-Clause
author:        Jason McCandless
maintainer:    jason@nocsi.com
category:      Network
build-type:    Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MCP.Core
    build-depends:    base ^>=4.18.2.0
                    , bluefin
    hs-source-dirs:   src
    default-language: GHC2021

test-suite mcp-core-test
    import:           warnings
    default-language: GHC2021
    type:            exitcode-stdio-1.0
    hs-source-dirs:  test
    main-is:         Spec.hs
    build-depends:   base ^>=4.18.2.0
                   , mcp-core
                   , hspec
                   , hedgehog
    build-tool-depends: hspec-discover:hspec-discover
